AmplifireP2Base/main/default/objects/Food__c/Food__c.object-meta.xml
<CustomObject>
    <description>Represents a food item that is available to be put into a food stand.</description>
    <label>Food</label>
    <nameField>
        <label>Food Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>