AmplifireP2Base/main/default/objects/Food__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Brief description of the food item.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>