AmplifireP2Base/main/default/objects/Food__c/fields/In_Stock__c.field-meta.xml
<CustomField>
    <fullName>In_Stock__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Shows whether the item is currently in stock.</description>
    <label>In Stock</label>
    <type>Checkbox</type>
</CustomField>