AmplifireP2Base/main/default/objects/Food__c/fields/Units_Per_Case__c.field-meta.xml
<CustomField>
    <fullName>Units_Per_Case__c</fullName>
    <description>How many units come per case.</description>
    <label>Units Per Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>